moved activities related to the blog feature to an appropriately named package

--- a/app/src/main/res/layout/activity_daily_challenge_main.xml
+++ b/app/src/main/res/layout/activity_daily_challenge_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DailyChallengeMain">
+    tools:context=".blog.DailyChallengeMain">
     <Button
         android:id="@+id/goBackDailyMainBT"
         android:layout_width="wrap_content"
