--- a/app/src/main/res/layout/activity_daily_challenge_post_details.xml
+++ b/app/src/main/res/layout/activity_daily_challenge_post_details.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     tools:context=".blog.DailyChallengePostDetails">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_above="@+id/commentLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -105,7 +108,6 @@
                         android:background="@color/white" />
 
 
-
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -129,7 +131,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="0 comments"/>
+                            android:text="0 comments" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -158,49 +160,54 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/commentNeutralTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Comment section"
                 android:drawableLeft="@drawable/ic_comment"
                 android:drawablePadding="5dp"
-                android:padding="2dp"/>
+                android:padding="2dp"
+                android:text="Comment section" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewComments"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/recyclerViewComments"/>
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
     <RelativeLayout
+        android:layout_alignParentBottom="true"
         android:id="@+id/commentLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/commentEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_margin="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginBottom="1dp"
             android:layout_toStartOf="@+id/addCommentBT"
             android:layout_toLeftOf="@+id/addCommentBT"
-            android:inputType="textCapSentences|textMultiLine"
             android:hint="Enter comment . . ."
-            />
+            android:inputType="textCapSentences|textMultiLine" />
 
         <ImageButton
+            android:id="@+id/addCommentBT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:src="@drawable/ic_send_comment"
-            android:id="@+id/addCommentBT"
-            android:layout_alignParentRight="true" />
+            android:src="@drawable/ic_send_comment" />
 
 
     </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
