--- a/app/src/main/res/layout/activity_daily_challenge_view_posts.xml
+++ b/app/src/main/res/layout/activity_daily_challenge_view_posts.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
-    tools:context=".blog.DailyChallengeViewPosts">
+    tools:context=".social_media.DailyChallengeViewPosts">
 
   <FrameLayout
       android:id="@+id/content"
