--- a/app/src/main/res/layout/activity_account__deletion.xml
+++ b/app/src/main/res/layout/activity_account__deletion.xml
@@ -62,7 +62,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBarAccDel" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBarAccDel"
+        app:layout_constraintVertical_bias="0.01" />
 
     <Button
         android:id="@+id/goBackAccDelBT"
