--- a/app/src/main/res/layout/activity_daily_challenge_main.xml
+++ b/app/src/main/res/layout/activity_daily_challenge_main.xml
@@ -4,29 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".blog.DailyChallengeMain">
+    tools:context=".social_media.DailyChallengeMain">
     <Button
-        android:id="@+id/goBackDailyMainBT"
+        android:id="@+id/goBackChallengeMainBT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="go back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewPostsBT" />
+        app:layout_constraintTop_toBottomOf="@+id/viewAllPostsBT" />
 
     <Button
-        android:id="@+id/makePostBT"
+        android:id="@+id/makeChallengePostBT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Make a post"
-        app:layout_constraintBottom_toTopOf="@+id/viewPostsBT"
+        app:layout_constraintBottom_toTopOf="@+id/viewAllPostsBT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neutralDailyTV" />
 
     <Button
-        android:id="@+id/viewPostsBT"
+        android:id="@+id/viewChallengePostsBT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View Posts"
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Today's word is:"
-        app:layout_constraintBottom_toTopOf="@+id/viewPostsBT"
+        app:layout_constraintBottom_toTopOf="@+id/viewAllPostsBT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:text="No Internet"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/viewPostsBT"
+        app:layout_constraintBottom_toTopOf="@+id/viewAllPostsBT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/neutralDailyTV"
         app:layout_constraintTop_toTopOf="parent" />
@@ -61,8 +61,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="user guide"
-        app:layout_constraintBottom_toTopOf="@+id/goBackDailyMainBT"
+        app:layout_constraintBottom_toTopOf="@+id/goBackArtMainBT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewPostsBT" />
+        app:layout_constraintTop_toBottomOf="@+id/viewAllPostsBT" />
 </androidx.constraintlayout.widget.ConstraintLayout>
