minor adjustments to xml elements

--- a/app/src/main/res/layout/activity_daily_challenge_main.xml
+++ b/app/src/main/res/layout/activity_daily_challenge_main.xml
@@ -30,7 +30,7 @@
         android:id="@+id/viewChallengePostsBT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Posts"
+        android:text="View Challenge Posts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
