--- a/app/src/main/res/layout/activity_share_all_artwork_main.xml
+++ b/app/src/main/res/layout/activity_share_all_artwork_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".social_media.ShareAllArtworkMain">
     <Button
         android:id="@+id/goBackArtMainBT"
@@ -30,7 +31,7 @@
         android:id="@+id/viewAllPostsBT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Posts"
+        android:text="View All Posts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
