--- a/app/src/main/res/layout/activity_challenge_colours.xml
+++ b/app/src/main/res/layout/activity_challenge_colours.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".randomChallgenges.ChallengeColours">
+    tools:context=".randomChallenges.ChallengeColours">
 
     <Button
         android:id="@+id/neutralColorPaletteBT1"
