--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -10,24 +10,13 @@
         android:id="@+id/homePagePFP"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:layout_marginTop="10dp"
         android:src="@mipmap/ic_launcher"
         app:civ_border_color="#1A5C28"
         app:civ_border_width="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/TVUsername"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/dailyChallengeMainBT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Daily Challenge"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.569" />
 
     <TextView
         android:id="@+id/TVUsername"
@@ -35,51 +24,122 @@
         android:layout_height="wrap_content"
         android:innerRadius="0dp"
         android:shape="ring"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:thicknessRatio="1.9"
         android:useLevel="false"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/dailyChallengeMainBT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/profileSettingBT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Profile settings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/ChallengeSelectionBT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Challenge yourself!"
-        app:layout_constraintBottom_toTopOf="@+id/dailyChallengeMainBT"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TVUsername"
-        app:layout_constraintVertical_bias="0.932" />
+        app:layout_constraintTop_toBottomOf="@+id/homePagePFP" />
 
     <Button
         android:id="@+id/logOutBT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Log out"
+        android:textColor="#FFFFFF"
+        app:backgroundTint="#474747"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/allPostsMainBT" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
-    <Button
-        android:id="@+id/allPostsMainBT"
+    <ImageButton
+        android:id="@+id/profileSettingIBT"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="#C8BB78"
+        android:src="@drawable/ic_settings_foreground"
+        app:layout_constraintBottom_toTopOf="@+id/logOutBT"
+        app:layout_constraintEnd_toEndOf="@+id/shareAllArtworkMainSelectionIBT"
+        app:layout_constraintStart_toStartOf="@+id/shareAllArtworkMainSelectionIBT"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <ImageButton
+        android:id="@+id/shareAllArtworkMainSelectionIBT"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="#2E9897"
+        android:src="@drawable/ic_image"
+        app:layout_constraintBottom_toTopOf="@+id/profileSettingIBT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/TVUsername" />
+
+    <ImageButton
+        android:id="@+id/dailyChallengeMainIBT"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="#8851CA"
+        android:src="@drawable/ic_create"
+        app:layout_constraintBottom_toTopOf="@+id/challengeSelectionIBT"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVUsername" />
+
+    <ImageButton
+        android:id="@+id/challengeSelectionIBT"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="#25C567"
+        android:src="@drawable/ic_palette_foreground"
+        app:layout_constraintBottom_toTopOf="@+id/logOutBT"
+        app:layout_constraintEnd_toEndOf="@+id/dailyChallengeMainIBT"
+        app:layout_constraintStart_toStartOf="@+id/dailyChallengeMainIBT"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/neutralTVHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Share and View artwork"
+        android:text="Daily Art Challenge"
+        app:layout_constraintEnd_toEndOf="@+id/dailyChallengeMainIBT"
+        app:layout_constraintStart_toStartOf="@+id/dailyChallengeMainIBT"
+        app:layout_constraintTop_toTopOf="@+id/dailyChallengeMainIBT" />
+
+    <TextView
+        android:id="@+id/neutralTVHome2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share new drawing"
+        app:layout_constraintEnd_toEndOf="@+id/shareAllArtworkMainSelectionIBT"
+        app:layout_constraintStart_toStartOf="@+id/shareAllArtworkMainSelectionIBT"
+        app:layout_constraintTop_toTopOf="@+id/shareAllArtworkMainSelectionIBT" />
+
+    <TextView
+        android:id="@+id/neutralTVHome3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Random Challenges"
+        app:layout_constraintEnd_toEndOf="@+id/challengeSelectionIBT"
+        app:layout_constraintStart_toStartOf="@+id/challengeSelectionIBT"
+        app:layout_constraintTop_toTopOf="@+id/challengeSelectionIBT" />
+
+    <TextView
+        android:id="@+id/neutralTVHome4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Account Settings"
+        app:layout_constraintEnd_toEndOf="@+id/profileSettingIBT"
+        app:layout_constraintStart_toStartOf="@+id/profileSettingIBT"
+        app:layout_constraintTop_toTopOf="@+id/profileSettingIBT" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="1dp"
+        android:layout_height="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dailyChallengeMainBT" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
